# hftbacktest

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  Cargo.toml
changelogs/: 2025-12-25.md  2025-12-26.md  2025-12-27.md
collector/: Cargo.toml
collector/src/: error.rs  file.rs  ipc_collector.rs  main.rs
collector/src/binancefuturesum/: mod.rs
connector/: Cargo.toml
connector/examples/: binancefutures.toml  binancefutures_orderbook_test.rs  binancepapi.toml  binancespot.toml
connector/src/: connector.rs  lib.rs  main.rs  utils.rs
connector/src/binancefutures/: market_data_stream.rs  mod.rs  orderbookmanager.rs  rest.rs  user_data_stream.rs
connector/src/binancepapi/: market_data_stream.rs  mod.rs  ordermanager.rs  rest.rs  user_data_stream.rs
connector/src/binancepapi/msg/: mod.rs  rest.rs  stream.rs
connector/src/binancespot/: mod.rs  user_data_stream.rs
connector/src/bybit/: mod.rs
docs/: FACTOR_FRAMEWORK_DESIGN.md  GENERIC_FACTOR_FRAMEWORK.md  HFT_SYSTEM_REQUIREMENTS.md  HF_FACTOR_FRAMEWORK_DESIGN.md  LIVE_TRADING_ARCHITECTURE.md  STATELESS_MM_DESIGN.md  STRATEGY_GUIDE.md
examples/testnet/: README.md
examples/testnet/config/: binancefutures_testnet.toml  binancespot_testnet.toml  bybit_testnet.toml  obi_mm_btcusdt.toml  obi_mm_testnet.toml  obi_mm_warmup_test.toml
examples/testnet/data/: .gitignore
examples/testnet/scripts/: convert_data.sh  start_collector.sh  start_collector_ipc.sh  start_connector.sh  start_obi_mm.sh
examples/testnet/src/: simple_mm.rs
factor-engine/: Cargo.toml
factor-engine/src/: combiner.rs  lib.rs  primitives.rs
factor-engine/src/factors/: mod.rs  obi.rs  stop_loss.rs  volatility.rs
hftbacktest/: Cargo.toml
hftbacktest/examples/: collector_e2e_test.rs  compare_tardis_converters.py  convert_collector_data.rs  tardis_benchmark.rs  tardis_convert.rs
hftbacktest/src/: lib.rs
hftbacktest/src/data/: collector.rs  mod.rs  tardis.rs  tardis_fast.rs  validation.rs
hftbacktest/src/live/: bot.rs
order-recorder/: Cargo.toml
order-recorder/src/: convert.rs  events.rs  hook.rs  lib.rs  main.rs  service.rs  writer.rs
py-hftbacktest/src/: live.rs
scripts/: convert_tardis_data.py  test_warmup.sh
strategies/: README.md  gridtrading.py
strategies/obi_mm/: backtest.py  obi_mm.py  utils.py
strategies/obi_mm_rust/: Cargo.toml  config.example.toml
strategies/obi_mm_rust/src/: backtest.rs  config.rs  lib.rs  live.rs  strategy.rs  testnet.rs  warmup.rs
