[package]
name = "factor-engine"
version = "0.1.0"
edition = "2024"
authors = ["bookdisco"]
description = "Streaming factor computation engine for high-frequency trading"
license = "MIT"
rust-version = "1.91.1"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
