[package]
name = "obi-mm"
version = "0.1.0"
edition = "2024"
authors = ["bookdisco"]
description = "Order Book Imbalance Market Making Strategy"
license = "MIT"
rust-version = "1.91.1"

[features]
default = []
live = ["hftbacktest/live"]

[[bin]]
name = "obi_mm_backtest"
path = "src/backtest.rs"

[[bin]]
name = "obi_mm_live"
path = "src/live.rs"

[dependencies]
hftbacktest = { path = "../../hftbacktest" }
factor-engine = { path = "../../factor-engine" }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
