[package]
name = "obi-mm"
version = "0.1.0"
edition = "2024"
authors = ["bookdisco"]
description = "Order Book Imbalance Market Making Strategy"
license = "MIT"
rust-version = "1.91.1"

[features]
default = []
live = ["hftbacktest/live", "dep:order-recorder"]

[[bin]]
name = "obi_mm_backtest"
path = "src/backtest.rs"

[[bin]]
name = "obi_mm_testnet"
path = "src/testnet.rs"
required-features = ["live"]

[dependencies]
hftbacktest = { path = "../../hftbacktest" }
factor-engine = { path = "../../factor-engine" }
order-recorder = { path = "../../order-recorder", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
flate2 = "1.0"
